# librecon

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt.bak  README
include/recon/: AbstractMeshProcessor.h  AbstractPointCloudGenerator.h  AbstractPointProcessor.h  AbstractProcessingPipeline.h  AbstractSensor.h  CameraExtrinsics.h  CameraIntrinsics.h  DepthFilePointCloudGenerator.h  DepthThreshold.h  DummySensor.h  FilePointCloudGenerator.h  Frame.h  GreedyProjectionMeshProcessor.h  OpenNI2Sensor.h  OrganizedFastMeshProcessor.h  PclOpenNI2Grabber.h  Pipeline01.h  Pipeline02.h  PointCloudSampler.h  PointCloudSmoother.h  SensorFactory.h  SimulatedOpenNI2Sensor.h  StaticBackgroundRemover.h  libraryinfo.h  libraryinfo.h.in.cmake  recon.h  typedefs.h  version.h  version.h.in.cmake
src/: AbstractMeshProcessor.cpp  AbstractPointCloudGenerator.cpp  AbstractPointProcessor.cpp  AbstractProcessingPipeline.cpp  AbstractSensor.cpp  CMakeLists.txt  CameraExtrinsics.cpp  CameraIntrinsics.cpp  DepthFilePointCloudGenerator.cpp  DepthThreshold.cpp  DummySensor.cpp  FilePointCloudGenerator.cpp  Frame.cpp  GreedyProjectionMeshProcessor.cpp  OpenNI2Sensor.cpp  OrganizedFastMeshProcessor.cpp  PclOpenNI2Grabber.cpp  Pipeline01.cpp  Pipeline02.cpp  PointCloudSampler.cpp  PointCloudSmoother.cpp  SensorFactory.cpp  SimulatedOpenNI2Sensor.cpp  StaticBackgroundRemover.cpp  libraryinfo.h  version.cpp
